<resources>
    <string name="app_name">Boyoot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="saved_role_value_key">roleKeyForShearedPref</string>

    <!-- Main menu -->
    <string name="menu_home">Home</string>
    <string name="reports">Reports</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_send">Send</string>
    <string name="filter_button">filter</string>
    <string name="map">Map</string>
    <string name="contact_not_found">Contact not found.</string>


    <!-- Log in Activity strings-->
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">Sign in</string>
    <string name="empty_message">Field cannot be empty</string>
    <string name="email_message">invalid email "example@company.com"</string>
    <string name="not_matching_pass">password not matching</string>
    <string name="login_email_error_message">Something went wrong</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_password_message">You have entered incorrect password.</string>
    <string name="phone">Phone</string>
    <string name="phone_message">Invalid phone number</string>
    <string name="or">OR</string>
    <string name="password_message">Password must be at least 8 characters long</string>
    <string name="reset_password">Reset your password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="send_reset">confirm</string>
    <string name="wrong_email">User email does not exist</string>
    <string name="success">Success</string>
    <string name="success_message">Please check your email and click on provided link to reset your password</string>
    <string name="ok_button">OK</string>
    <string name="sign_out">Sign out</string>

    <!-- configurations fragment -->
    <string name="city_config">City configurations</string>
    <string name="branches_config">Branches configurations</string>
    <string name="city">city</string>
    <string name="code">code</string>
    <string name="prices">PRICES</string>
    <string name="branch">BRANCHES</string>
    <string name="offers">Offer</string>
    <string name="price">New price</string>
    <string name="edit_price_message">To change the price \n Please enter new price and confirm.</string>
    <!-- Home fragment -->

    <string name="new_contacts">New Contacts</string>
    <string name="cancel">Cancel</string>

    <!-- Google sheet activity -->

    <string name="google_sheet_activity_title">Google Sheet</string>
    <string name="state_new_contact">New contact</string>
    <string name="state_location_needed">Location needed</string>
    <string name="state_prepared_contact">Prepared Contact</string>
    <string name="state_new_jobs">New Jobs</string>
    <string name="state_date_picked">Date picked</string>
    <string name="state_date_approved">Date approved</string>
    <string name="state_work_delayed">Work delayed</string>
    <string name="state_work_done">Work done</string>
    <string name="state_reviewed">Reviewed</string>
    <string name="place_holder_content">Place holder label</string>
    <string name="date_label_content">Date label</string>
    <string name="search_label">Search contacts</string>


    <!-- Edit Contact activity -->

    <string name="number_edit_hint">Number</string>
    <string name="phone_number">Phone</string>
    <string name="location_link">Location link</string>
    <string name="split">Split</string>
    <string name="window">Window</string>
    <string name="cover">Cover</string>
    <string name="stand">Stand</string>
    <string name="note">Note</string>
    <string name="work_required">Work required :</string>
    <string name="registration_date">Registration date.</string>
    <string name="save_button">Save</string>
    <string name="edit_contact_title">Create Contact</string>
    <string name="phone_error_message">Invalid phone number</string>
    <string name="link_error_message">Invalid location link</string>
    <string name="city_error_message">Choose City</string>
    <string name="date_error_message">Choose interval</string>
    <string name="concealed">Concealed</string>
    <string name="discount">Discount</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>

    <string name="hour">h</string>
    <string name="minutes">m</string>


    <string-array name="cities_array">
        <item>Choose City</item>
        <item>الدمام</item>
        <item>مكه</item>
        <item>جده</item>
        <item>الخرج</item>
        <item>المدينه</item>
        <item>المجمعه</item>
        <item>منطقه 1</item>
        <item>القصيم</item>
        <item>الرياض</item>
        <item>الإحساء</item>
        <item>منطقه 2</item>
        <item>جيزان</item>
    </string-array>

    <string-array name="roles_array">
        <item>Admin</item>
        <item>Manager</item>
        <item>Moderator</item>
        <item>Worker</item>
        <item>User</item>
    </string-array>

    <!--
     <item>Dammam</item>
        <item>Mecca</item>
        <item>Jeddah</item>
        <item>Al-Kharj</item>
        <item>Medina</item>
        <item>Al Majma\'ah</item>
        <item>Area 1</item>
        <item>Al Qassim</item>
        <item>Riyadh</item>
        <item>Alahsaa</item>
        <item>Area 2</item>
        <item>Jazan</item>
        -->

    <string-array name="date_array">
        <item>Choose interval</item>
        <item>Morning</item>
        <item>Evening</item>
    </string-array>
    <!-- user activity-->
    <string name="make_request">Send request</string>
    <string name="contact_us">contact us</string>
    <string name="intro"> مؤسسة بيوت لتنظيف المكيفات ولمظلات المكيفات "\n" نسعى في مؤسسة بيوت أن نجعل حياتكم سعيدة وأن نقدم خدمات تليق بكم, هدفنا أن نجعلكم تعيشون الصيف بإنتعاش, وكل ذلك يتم وفق عمل دؤوب من قبل طاقم المؤسسة لنفوز برضاكم ولنسعد بخدمتكم.</string>
    <string name="employees">Employees</string>

    <!-- employee fragment -->
    <string name="user_iv_content">user icon image</string>
    <string name="profile_activity">Profile</string>
    <string name="activated_state">Activated</string>
    <string name="deactivated_state">Deactivated</string>
    <string name="active_button">Active</string>
    <string name="deactivate_button">Deactivate</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Title</string>
    <string name="task_content">Content</string>
    <!-- Contact Bottom Sheet -->
    <string name="add_contact">Add to contacts</string>
    <string name="appointment_label">Appointment appears here</string>
    <string name="copy_location_label">Location appears here</string>
    <string name="cost">Cost : </string>
    <string name="last_modified">Last modified by</string>
    <string name="location_require">Location require</string>


    <!-- appointment list -->
    <string name="canecle_add_job_dialog">Cancel</string>
    <string name="title_add_job_dialog">Add new job ?</string>
    <string name="message_add_job_dialog">it seems current job not added to the list</string>
    <string name="confirm_add_job_dialog">Add</string>
    <string name="appointment_list_title">Jobs TimeLine</string>
    <string name="canecle_divide_job_dialog">NO</string>
    <string name="title_divide_job_dialog">Do you want divide this job ?</string>
    <string name="message_divide_job_dialog">divide this job into multi appointment</string>
    <string name="confirm_divide_job_dialog">YES</string>

    <string name="edit_job_title">Edit Job</string>
    <string name="create_jobe_title">Create Job</string>
    <string name="divide_job_text">Divide this job</string>

    <string name="job_activity_title">Job</string>
    <string name="job_settings_title">job settings</string>
    <string name="appointment_button">Add Appointment</string>
    <string name="total_ACs">total</string>

    <string name="worker">Workers | </string>
    <string name="branch_title">Branch</string>
    <string name="day_start">Day start</string>
    <string name="day_end">Day end</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="message_deactivate_account">By deactivating this account no longer have access to the app.</string>
    <string name="title_deactivate_account">Deactivate account?</string>
    <string name="confirm_deactivate_account">Deactivate</string>
    <string name="canecl_deactivate_account">Cancel</string>
    <string name="calender">calender</string>
    <string name="car_number">Car Plate No.</string>
    <string name="worker_number">Worker No.</string>

    <string name="message_delete_car">Make sure that car have no jobs in its path.</string>
    <string name="title_delete_car">Delete this car?</string>
    <string name="confirm_delete_car">Delete</string>
    <string name="cancel_delete_car">Cancel</string>
    <string name="delete_contacts">Delete contacts</string>

    <string name="appointment_approved">Confirm an appointment</string>
    <string name="remove_appointment">Remove Appointment</string>

    <string name="confirm_appointment_message">The chosen appointment will be confirmed.</string>
    <string name="unconfirm_appointment_message">The confirmed appointment will be set as picked unconfirmed date.</string>
    <string name="delay_job_title">Delay this job?</string>
    <string name="delay_job_massege">This job will be listed in delayed jobs.</string>
    <string name="cancel_delay_massege">This job will be listed in new jobs.</string>
    <string name="cancel_job_title">Cancel this job?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_job_massege">This job will be listed in canceled jobs.</string>
    <string name="uncancel_job_massege">This job will be listed in new jobs.</string>

    <string name="team_title">Team</string>
    <string name="first_option">First option</string>
    <string name="first_option_description">First Option allows you to add appointment at morning \" day start time \" from original location \" workers home \"</string>
    <string name="second_option">Second option</string>
    <string name="second_option_description">Second Option allows you to add appointment at anytime you picked from original location \" workers home \"</string>
    <string name="third_option">Third option</string>
    <string name="third_option_description">Third Option allows you to add appointment at anytime you picked from jobs list</string>
    <string name="new_jobs_filter_by_branch_title">Sort new jobs by branch</string>
    <string name="new_jobs_filter_by_interval_title">Sort new jobs by interval</string>
</resources>

