<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_users"
            android:title="@string/employees" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_show_chart"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_config" />
    </group>

    <item android:title="">

        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
