<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_contacts_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagNewContact"
        android:elevation="4dp"
        android:text="@string/new_contacts"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#2583B3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagLocationNeeded"
        android:elevation="4dp"
        android:text="@string/state_location_needed"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_contacts_button"
        app:rippleColor="#CC6945" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagDateApproved"
        android:elevation="4dp"
        android:text="@string/state_date_approved"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2"
        app:rippleColor="#328C74" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagDatePicked"
        android:elevation="4dp"
        android:text="@string/state_date_picked"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton"
        app:rippleColor="#5E69A8" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/materialButton5"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagWorkDone"
        android:elevation="4dp"
        android:text="@string/state_work_done"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton4"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#386EB5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorTagWorkDelay"
        android:elevation="4dp"
        android:text="@string/state_work_delayed"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3"
        app:rippleColor="#B03E45" />


</androidx.constraintlayout.widget.ConstraintLayout>