<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <FrameLayout
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:elevation="4dp"
            android:layout_gravity="start|center"
            android:src="@drawable/ic_close"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:textSize="21sp"
            android:textColor="@color/colorTypoDark"
            android:layout_gravity="center"
            android:text="Options"
            android:gravity="center"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/first_option_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:strokeColor="@color/colorFirstOption"
            app:strokeWidth="1dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_first_option_info" />

            <TextView
                android:id="@+id/first_option_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:text="@string/first_option_description" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/first_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackGround"
            android:text="@string/first_option"
            android:textColor="@color/colorFirstOption"
            app:rippleColor="@color/colorTypo" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/second_option_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:strokeColor="@color/colorSecondOption"
            app:strokeWidth="1dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="start|center"
                android:src="@drawable/ic_second_info" />

            <TextView
                android:id="@+id/second_option_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:text="@string/second_option_description" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/second_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackGround"
            android:onClick="pickTime"
            android:text="@string/second_option"
            android:textColor="@color/colorSecondOption"
            app:rippleColor="@color/colorTypo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/third_option_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:strokeColor="@color/colorThirdOption"
            app:strokeWidth="1dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="start|center"
                android:src="@drawable/ic_third_info" />

            <TextView
                android:id="@+id/third_option_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginStart="32dp"
                android:text="@string/third_option_description" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/third_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackGround"
            android:text="@string/third_option"
            android:textColor="@color/colorThirdOption"
            app:rippleColor="@color/colorTypo" />


    </LinearLayout>
