<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@null"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackGround"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/unit_type_tv"
                android:padding="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="36sp"
                android:textColor="@color/colorTypoDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center"
                android:padding="8dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/edit_price_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_gravity="center"
                android:autofillHints="price"
                android:layout_marginTop="24dp"
                android:id="@+id/price_edit_text"
                android:hint="@string/price"
                android:inputType="number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_price_button"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"/>
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_margin="16dp"
                    android:id="@+id/confirm_price_button"
                    android:text="@string/send_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>