<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ResetPasswordActivity">


        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:background="@null"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/logo_typo" />

            <TextView
                android:textColor="@color/colorTypoDark"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:textSize="21sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/sign_in_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:indeterminate="true"
            android:max="100"
            android:progress="25"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/reset_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:alpha="0.8"
            android:background="@drawable/error_message"
            android:padding="11dp"
            android:textColor="#7f0000"
            android:text="@string/wrong_email"
            android:textSize="21sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_progress_bar" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textColor="@color/colorTypoDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/reset_error_text_view"
            app:layout_constraintTop_toBottomOf="@+id/reset_error_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:focusableInTouchMode="true"
            app:helperTextEnabled="true"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/reset_error_text_view"
            app:layout_constraintStart_toStartOf="@+id/reset_error_text_view"
            app:layout_constraintTop_toBottomOf="@+id/reset_error_text_view">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_reset_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="240dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorSecondary"
            android:elevation="4dp"
            android:text="@string/send_reset"
            android:textColor="@color/colorBackGround"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:rippleColor="@color/colorRippleLight" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>